src/grammar/.antlr/TyCParser.py
# Generated from /Users/hyriki/Documents/GitHub/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'int'", "'float'", "'string'", "'void'", "'struct'", 
                     "'auto'", "'break'", "'continue'", "'return'", "'if'", 
                     "'else'", "'case'", "'switch'", "'default'", "'for'", 
                     "'while'", "'('", "')'", "'{'", "'}'", "';'", "','", 
                     "':'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'||'", "'&&'", "'!'", 
                     "'++'", "'--'", "'.'", "'='" ]

    symbolicNames = [ "<INVALID>", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "INT", "FLOAT", "STRING", "VOID", "STRUCT", "AUTO", 
                      "BREAK", "CONTINUE", "RETURN", "IF", "ELSE", "CASE", 
                      "SWITCH", "DEFAULT", "FOR", "WHILE", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "SEMI", "COMMA", "COLON", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "EQ", "NEQ", "LT", "GT", 
                      "LEQ", "GEQ", "OR", "AND", "NOT", "INC", "DEC", "MEMBER", 
                      "ASSIGN", "INT_T", "FLOAT_T", "IDENTIFIER", "STRING_T", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_type = 2
    RULE_literal = 3
    RULE_functionCall = 4
    RULE_argList = 5
    RULE_structDecl = 6
    RULE_structMember = 7
    RULE_structLiteral = 8
    RULE_functionDecl = 9
    RULE_returnType = 10
    RULE_paramList = 11
    RULE_param = 12
    RULE_blockStm = 13
    RULE_statement = 14
    RULE_varDecl = 15
    RULE_forInit = 16
    RULE_caseBlock = 17
    RULE_expr = 18

    ruleNames =  [ "program", "declaration", "type", "literal", "functionCall", 
                   "argList", "structDecl", "structMember", "structLiteral", 
                   "functionDecl", "returnType", "paramList", "param", "blockStm", 
                   "statement", "varDecl", "forInit", "caseBlock", "expr" ]

    EOF = Token.EOF
    WS=1
    LINE_COMMENT=2
    BLOCK_COMMENT=3
    INT=4
    FLOAT=5
    STRING=6
    VOID=7
    STRUCT=8
    AUTO=9
    BREAK=10
    CONTINUE=11
    RETURN=12
    IF=13
    ELSE=14
    CASE=15
    SWITCH=16
    DEFAULT=17
    FOR=18
    WHILE=19
    LPAREN=20
    RPAREN=21
    LBRACE=22
    RBRACE=23
    SEMI=24
    COMMA=25
    COLON=26
    ADD=27
    SUB=28
    MUL=29
    DIV=30
    MOD=31
    EQ=32
    NEQ=33
    LT=34
    GT=35
    LEQ=36
    GEQ=37
    OR=38
    AND=39
    NOT=40
    INC=41
    DEC=42
    MEMBER=43
    ASSIGN=44
    INT_T=45
    FLOAT_T=46
    IDENTIFIER=47
    STRING_T=48
    ILLEGAL_ESCAPE=49
    UNCLOSE_STRING=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(TyCParser.DeclarationContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488355824) != 0):
                self.state = 38
                self.declaration()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDecl(self):
            return self.getTypedRuleContext(TyCParser.StructDeclContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(TyCParser.FunctionDeclContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_declaration




    def declaration(self):

        localctx = TyCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.structDecl()
                pass
            elif token in [4, 5, 6, 7, 47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.functionDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TyCParser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StringTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(TyCParser.STRING, 0)


    class IdentifierTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)


    class IntTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(TyCParser.INT, 0)


    class FloatTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(TyCParser.FLOAT, 0)



    def type_(self):

        localctx = TyCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        try:
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                localctx = TyCParser.IntTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(TyCParser.INT)
                pass
            elif token in [5]:
                localctx = TyCParser.FloatTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.match(TyCParser.FLOAT)
                pass
            elif token in [6]:
                localctx = TyCParser.StringTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.match(TyCParser.STRING)
                pass
            elif token in [47]:
                localctx = TyCParser.IdentifierTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.match(TyCParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TyCParser.RULE_literal

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StringLiteralContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING_T(self):
            return self.getToken(TyCParser.STRING_T, 0)


    class FloatLiteralContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT_T(self):
            return self.getToken(TyCParser.FLOAT_T, 0)


    class IntLiteralContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT_T(self):
            return self.getToken(TyCParser.INT_T, 0)


    class StructLiteralExprContext(LiteralContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structLiteral(self):
            return self.getTypedRuleContext(TyCParser.StructLiteralContext,0)




    def literal(self):

        localctx = TyCParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_literal)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [45]:
                localctx = TyCParser.IntLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(TyCParser.INT_T)
                pass
            elif token in [46]:
                localctx = TyCParser.FloatLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.match(TyCParser.FLOAT_T)
                pass
            elif token in [48]:
                localctx = TyCParser.StringLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.match(TyCParser.STRING_T)
                pass
            elif token in [22]:
                localctx = TyCParser.StructLiteralExprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.structLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def argList(self):
            return self.getTypedRuleContext(TyCParser.ArgListContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_functionCall




    def functionCall(self):

        localctx = TyCParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(TyCParser.IDENTIFIER)
            self.state = 63
            self.match(TyCParser.LPAREN)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 535462570622976) != 0):
                self.state = 64
                self.argList()


            self.state = 67
            self.match(TyCParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_argList




    def argList(self):

        localctx = TyCParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.expr(0)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 70
                self.match(TyCParser.COMMA)
                self.state = 71
                self.expr(0)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def LBRACE(self):
            return self.getToken(TyCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TyCParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def structMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructMemberContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructMemberContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_structDecl




    def structDecl(self):

        localctx = TyCParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(TyCParser.STRUCT)
            self.state = 78
            self.match(TyCParser.IDENTIFIER)
            self.state = 79
            self.match(TyCParser.LBRACE)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488355440) != 0):
                self.state = 80
                self.structMember()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(TyCParser.RBRACE)
            self.state = 87
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_structMember




    def structMember(self):

        localctx = TyCParser.StructMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_structMember)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.type_()
            self.state = 90
            self.match(TyCParser.IDENTIFIER)
            self.state = 91
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(TyCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TyCParser.RBRACE, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_structLiteral




    def structLiteral(self):

        localctx = TyCParser.StructLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_structLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(TyCParser.LBRACE)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 535462570622976) != 0):
                self.state = 94
                self.expr(0)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==25:
                    self.state = 95
                    self.match(TyCParser.COMMA)
                    self.state = 96
                    self.expr(0)
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 104
            self.match(TyCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def blockStm(self):
            return self.getTypedRuleContext(TyCParser.BlockStmContext,0)


        def returnType(self):
            return self.getTypedRuleContext(TyCParser.ReturnTypeContext,0)


        def paramList(self):
            return self.getTypedRuleContext(TyCParser.ParamListContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_functionDecl




    def functionDecl(self):

        localctx = TyCParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 106
                self.returnType()


            self.state = 109
            self.match(TyCParser.IDENTIFIER)
            self.state = 110
            self.match(TyCParser.LPAREN)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 140737488355440) != 0):
                self.state = 111
                self.paramList()


            self.state = 114
            self.match(TyCParser.RPAREN)
            self.state = 115
            self.blockStm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_returnType




    def returnType(self):

        localctx = TyCParser.ReturnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnType)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.type_()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(TyCParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ParamContext)
            else:
                return self.getTypedRuleContext(TyCParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_paramList




    def paramList(self):

        localctx = TyCParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.param()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 122
                self.match(TyCParser.COMMA)
                self.state = 123
                self.param()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(TyCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param




    def param(self):

        localctx = TyCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.type_()
            self.state = 130
            self.match(TyCParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(TyCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TyCParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StatementContext)
            else:
                return self.getTypedRuleContext(TyCParser.StatementContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_blockStm




    def blockStm(self):

        localctx = TyCParser.BlockStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_blockStm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(TyCParser.LBRACE)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 535462571490928) != 0):
                self.state = 133
                self.statement()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(TyCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TyCParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ContinueStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONTINUE(self):
            return self.getToken(TyCParser.CONTINUE, 0)
        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)


    class SwitchStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TyCParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SWITCH(self):
            return self.getToken(TyCParser.SWITCH, 0)
        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)
